gitops-workshop/kustomize/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 1   # will be overridden
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      imagePullSecrets:
        - name: frontend-regcred
      containers:
        - name: frontend
          image: cassiesouza/workshop:latest  # will be overridden
          imagePullPolicy: Always
          ports:
            - containerPort: 4000
