gitops-workshop/kustomize/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-frontend
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 4000
      protocol: TCP
  selector:
    app: frontend
